FCREPO-1168, FCREPO-1089, FCREPO-1090 - Pool DocumentBuilders and non-validating SAXParsers where possible - add a convenience method to XmlTransformUtility - Upgrade to Apache Commons Pool 1.6